added preference options for exitActions
You can set what terminal-runner will do after the executed command has finished:
Drop to shell (default): Terminal remains open with users standard shell.
Exit with any key: Wait for any input from keyboard, exit the shell and Terminal.

--- a/manifest.json
+++ b/manifest.json
@@ -30,6 +30,17 @@
             "default_value": "--"
         },
         {
+             "id": "exit",
+             "type": "select",
+             "name": "Exit Action",
+             "description": "What to do after the program has finished",
+             "default_value": "shell",
+             "options": [
+                 {"text": "Drop to shell", "value": "shell"},
+                 {"text": "Exit with any key", "value": "exitAnyKey"}
+            ]
+        },
+        {
             "id": "icon",
             "type": "select",
             "name": "Icon style",
